[tool.poetry]
name = "rucksack"
version = "0.1.0"
description = ""
authors = ["Mei Wu <25568561+projectoriented@users.noreply.github.com>"]

[tool.poetry.scripts]
rucksack = "rucksack.cli.base:base_command"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"
pydantic = "^1.9.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
