[tool.poetry]
name = "rucksack"
version = "0.1.0"
description = ""
authors = ["Mei Wu <25568561+projectoriented@users.noreply.github.com>"]

[tool.poetry.scripts]
rucksack = "rucksack.cli.base:cli_base"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"
pydantic = "^1.9.0"
tomlkit = "^0.9.0"
pybedtools = "0.8.2"
pandas = "1.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
